--- a/bases/rsptx/interactives/runestone/activecode/css/activecode.css
+++ b/bases/rsptx/interactives/runestone/activecode/css/activecode.css
@@ -160,3 +160,26 @@
 .ac_section .alert h3:first-child {
     margin-top: 0px;
   }
+
+#scaffolding-container {
+    margin-right: 20px;
+    position: fixed;
+    right: 0px;
+    max-height: 100%;
+    overflow-y: scroll;
+    top: 0px;
+    padding-top: 60px;
+    z-index: 999;
+}
+
+#scaffolding-container.hidden {
+    display: none;
+}
+
+.parsons-scaffolding {
+    border: 4px solid;
+    border-radius: 10px;
+    background-color: azure;
+    padding-top: 10px;
+    box-shadow: 10px 5px 5px gray;
+}
