--- a/bases/rsptx/interactives/runestone/parsons/css/parsons.css
+++ b/bases/rsptx/interactives/runestone/parsons/css/parsons.css
@@ -202,14 +202,35 @@
     font-style: italic;
     background-color: white;
     border-style: dashed;
+    padding: 30px 10px;
 }
 
-.placeholder-block .lines {
+.parsons .settled-block.disabled.block {
+    border: 1px solid black;
+    background-color: #afe1af;
+    opacity: 0.5;
+}
+
+.parsons .settled-block .block-label {
+    color: transparent;
+}
+
+
+.parsons .placeholder-block .lines {
     display: none;
 }
+
+.parsons .placeholder-block.hide {
+    display: none;
+}
+
 
 .placeholder-block .labels {
     display: none;
+}
+
+.settled-block .labels .block-label {
+    color:transparent;
 }
 
 .parsons code {
