Adding problem description to popped window

--- a/bases/rsptx/interactives/runestone/activecode/css/activecode.css
+++ b/bases/rsptx/interactives/runestone/activecode/css/activecode.css
@@ -197,3 +197,9 @@
 .copy-button-hide {
     display: none;
 }
+
+/* open coding aid*/
+.parsons-scaffolding-btn {
+    background-color: #ED7014;
+    color: white;
+}
