--- a/bases/rsptx/interactives/runestone/activecode/css/activecode.css
+++ b/bases/rsptx/interactives/runestone/activecode/css/activecode.css
@@ -172,6 +172,10 @@
     z-index: 999;
 }
 
+#scaffolding-container .ac_actions {
+    display: none;
+}
+
 #scaffolding-container.hidden {
     display: none;
 }
@@ -190,6 +194,7 @@
 
 #scaffolding-loading-prompt{
     display: none;
+    text-align: center;
     background-color: #fad9c8;
     padding: 10px 20px;
     margin: 5px;
@@ -213,4 +218,20 @@
 
 .reopen-help-btn.hide {
     display: none;
+}
+
+#loading-spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-top: 4px solid #606c38;
+    border-bottom: 4px solid #606c38;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+    margin: 0 auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
